--- a/svgs.html
+++ b/svgs.html
@@ -58,18 +58,20 @@
         <path d="M14 3v4a1 1 0 0 0 1 1h4" />
         <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
       </svg>
-
+      <section>
       <p> Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
 
       <p> These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
-
+    </section>
+    <section>
       <h2>Details</h2>
       Prep Time: 10 minutes
       Cook Time: 10 minutes
         Total Time: 20 minutes
           Author: Taco Cheesington
       Servings: 6 Tacos
-
+    </section>
+    <section>
       <h2>Ingredients</h2>
       <ul>
         <li>Flank steak</li>
@@ -84,7 +86,8 @@
         <li>Pepper</li>
         <li>Corn tortillas</li>
       </ul>
-
+    </section>
+    <section>
       <h2>Directions</h2>
       <ol>
         <li>1.	Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
@@ -92,7 +95,8 @@
         <li>3.	Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
         <li>4.	Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
-
+    </section>
+    <section>
       <h2>Need some side dishes?</h2>
       <h3>Mexican Rice</h3>
         <dl>
@@ -112,6 +116,8 @@
       <h3>Tortillas</h3>
         <dl>Easy tp ,ale md sp good.</dl>
         <dd>Rating: 4 of 5 Stars</dd>
+    </section>
+    <section>
       <h2>Main Navigation</h2>
     <!--hamburger-->
     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" style="enable-background:new 0 0 40 40" xml:space="preserve">
@@ -146,6 +152,8 @@
         <circle cx="10" cy="10" r="7" />
         <line x1="21" y1="21" x2="15" y2="15" />
     </svg>
+  </section>
+  <section>
     <h2>Connect</h2>
     <h3>Social Media Links</h3>
     <!--star-->
@@ -182,6 +190,7 @@
         <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
       </svg>
     </ul>
+  </section>
       <footer>
       <h3>Good Eats</h3>
         <p>Copyright 2022</p>
