--- a/svgs.html
+++ b/svgs.html
@@ -17,9 +17,9 @@
       <li>Share</li>
       <li>Print</li>
       <li>Jump to Recipe</li>
-    </ul>
+    
        <!--logo-->
-    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M4 3h8l-1 9h-6z" />
         <path d="M7 18h2v3h-2z" />
@@ -28,12 +28,13 @@
         <line x1="8" y1="12" x2="8" y2="18" />
       </svg>
     <!--save-->
-    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <li a 
+    svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
         <polyline points="7 11 12 16 17 11" />
         <line x1="12" y1="4" x2="12" y2="16" />
-      </svg>
+      </svg>Save</a></li>
     <!--share-->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-share" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -90,10 +91,10 @@
     <section>
       <h2>Directions</h2>
       <ol>
-        <li>1.	Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
-        <li>2.	Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
-        <li>3.	Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
-        <li>4.	Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
+        <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
+        <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
+        <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
+        <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
     </section>
     <section>
