--- a/svgs.html
+++ b/svgs.html
@@ -129,6 +129,8 @@
       </svg>
       <figcaption>Menu</figcaption>
     </figure>
+    <input type="checkbox" id="dropdown" />
+        <label for="dropdown"><span></span></label>
         <ul>
           <li>Home</li>
           <li>Breakfast</li>
@@ -138,6 +140,8 @@
           <li>Appetizers</li>
           <li>Desserts</li>
           <li>Beverages</li>
+        </ul>
+  </main nav>
         
     <!--avatar-->
     <div id="avatar">
@@ -148,8 +152,7 @@
         <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
       </svg>
     </div>
-    </ul>
-  </main nav>
+   
           <div>
     <!--search-->
     <input type="search" id="site-search" name="q">
