--- a/svgs.html
+++ b/svgs.html
@@ -153,7 +153,7 @@
           <li>Beverages</li>
         </ul>
       </div>
-  </main nav>
+  </nav>
         
     <!--avatar-->
     <div id="avatar">
