--- a/svgs.html
+++ b/svgs.html
@@ -124,8 +124,8 @@
       <div class="hero">
         <nav>
         <h2>Main Navigation</h2>
-        <input type="checkbox" id="dropdown" />
-        <label for="dropdown"><span>Menu</span></label>
+        <input type="checkbox" id="home" />
+        <label for="#home"><span>Menu</span></label>
           
         <ul>
           <li><a href="#home"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" style="enable-background:new 0 0 40 40" xml:space="preserve">
