--- a/svgs.html
+++ b/svgs.html
@@ -124,7 +124,7 @@
       <div class="hero">
         <nav>
         <h2>Main Navigation</h2>
-        <input type="checkbox" id="home" />
+        <input type="checkbox" id="#home" />
         <label for="#home"><span>Menu</span></label>
           
         <ul>
