--- a/svgs.html
+++ b/svgs.html
@@ -127,7 +127,7 @@
         
           
         <input type="checkbox" id="dropdown" />
-        <label for="dropdown"><span></span></label>
+        <label for="dropdown"><span>Menus</span></label>
         <ul>
         <div class="home"><li><a href="#home">Menu
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" style="enable-background:new 0 0 40 40" xml:space="preserve">
