--- a/svgs.html
+++ b/svgs.html
@@ -124,7 +124,7 @@
         <nav>
         <h2>Main Navigation</h2>
         
-         <section id="main-nav"></section>
+         <section id="main-nav">
         <input type="checkbox" id="dropdown"/>
         <label for="dropdown"><span>Menus</span></label>
         <ul>
@@ -146,6 +146,7 @@
                <line x1="8" y1="12" x2="8" y2="18" />
              </svg></a></li>
           </div>
+        </section>
           <li>Breakfast</li>
           <li>Brunch</li>
           <li>Lunch</li>
