--- a/svgs.html
+++ b/svgs.html
@@ -136,7 +136,7 @@
             
           </svg></a></li></div>
           <div class="logo">
-            <li><a><!--logo-->
+            <li><a href="#logo"><!--logo-->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                <path d="M4 3h8l-1 9h-6z" />
