--- a/svgs.html
+++ b/svgs.html
@@ -60,10 +60,8 @@
         <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
       </svg>
     </ul>
-      <section>
-      
-    </section>
-    <section>
+      </header>
+    <section id="details">
       <h2>Details</h2>
       Prep Time: 10 minutes
       Cook Time: 10 minutes
@@ -71,7 +69,7 @@
           Author: Taco Cheesington
       Servings: 6 Tacos
     </section>
-    <section>
+    <section id="ingredients">
       <h2>Ingredients</h2>
       <ul>
         <li>Flank steak</li>
@@ -87,7 +85,7 @@
         <li>Corn tortillas</li>
       </ul>
     </section>
-    <section>
+    <section id="ingredients">
       <h2>Directions</h2>
       <ol>
         <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
@@ -96,7 +94,7 @@
         <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
     </section>
-    <section>
+    <section id="sides">
       <h2>Need some side dishes?</h2>
       <h3>Mexican Rice</h3>
         <dl>
@@ -162,25 +160,17 @@
       </svg></a></li>
     </div>
   </ul>
-</section>
- 
-   
-
-</nav>
-
-
-</div>
-          <div>
+<div id="search">
     <!--search-->
     <input type="search" id="site-search" name="q">
-
-<button>Search</button>
+    <button>Search</button>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <circle cx="10" cy="10" r="7" />
         <line x1="21" y1="21" x2="15" y2="15" />
     </svg>
-          </div>
+</div>
+  </nav>
   </section>
   <section>
     <h2>Connect</h2>
@@ -225,7 +215,6 @@
         <p>Copyright 2022</p>
         <p>Taco Cheesington</p>
     </footer>
-  </header>
 </body>
 </html>
 
