--- a/svgs.html
+++ b/svgs.html
@@ -18,7 +18,7 @@
         <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
       </figcaption>
       </figure>
-   
+   <section id="media">
     <ul>
       
     <!--save-->
@@ -57,6 +57,7 @@
         <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
       </svg>
     </ul>
+  </section>
       </header>
     <section id="details">
       <h2>Details</h2>
