--- a/svgs.html
+++ b/svgs.html
@@ -11,16 +11,8 @@
   <header>
     <!--Good Eats-Street Tacos-->
     <h1> Street Tacos</h1>
-    <figure id="street-tacos">
-      <img src="street-tacos.png" alt="tacos" style="width:100%";>
-      <figcaption>
-        <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
-        <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
-      </figcaption>
-      </figure>
    <section id="media">
     <ul>
-      
     <!--save-->
     <li>Save</li>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -59,6 +51,15 @@
     </ul>
   </section>
 </header>
+<main>
+<figure id="street-tacos">
+  <img src="street-tacos.png" alt="tacos" style="width:100%";>
+  <figcaption>
+    <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
+    <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
+  </figcaption>
+  </figure>
+</main>
     <section id="details">
       <h2>Details</h2>
       Prep Time: 10 minutes
