--- a/svgs.html
+++ b/svgs.html
@@ -60,14 +60,15 @@
   </figcaption>
   </figure>
 </main>
-    <section id="details">
+    <article id="details">
+      <section>
       <h2>Details</h2>
-      Prep Time: 10 minutes
-      Cook Time: 10 minutes
-        Total Time: 20 minutes
-          Author: Taco Cheesington
-      Servings: 6 Tacos
-    </section>
+        <p>Prep Time: 10 minutes</p>
+        <p>Cook Time: 10 minutes</p>
+        <p>Total Time: 20 minutes</p>
+        <p>Author: Taco Cheesington</p>
+        <p>Servings: 6 Tacos</p>
+      </section>
     <section id="ingredients">
       <h2>Ingredients</h2>
       <ul>
@@ -84,7 +85,7 @@
         <li>Corn tortillas</li>
       </ul>
     </section>
-    <section id="ingredients">
+    <section id="directions">
       <h2>Directions</h2>
       <ol>
         <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
@@ -93,8 +94,9 @@
         <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
     </section>
-    <section id="sides">
+    <article id="sides">
       <h2>Need some side dishes?</h2>
+      <section>
       <h3>Mexican Rice</h3>
         <dl>
           <dt>Traditional recipe with a twist.</dt>
