--- a/svgs.html
+++ b/svgs.html
@@ -97,30 +97,31 @@
     <article id="sides">
       <h2>Need some side dishes?</h2>
       <section>
-      <h3>Mexican Rice</h3>
-        <dl>
-          <dt>Traditional recipe with a twist.</dt>
-          <dd> rating:4of 5 Stars</dd>
-        </dl>
-      <h3>Salsa</h3>
-        <dl>
-          <dt>Just the right amount of spice.</dt>
-          <dd>Rating: 5of 5 Stars</dd>
-        </dl>
-      <h3>Guacamole</h3>
-        <dl>
-          <dt>Fresh and healthy</dt>
-          <dd>Rating: 4 of 5 Stars</dd>
-        </dl>
-      <h3>Tortillas</h3>
-        <dl>Easy tp ,ale md sp good.</dl>
-        <dd>Rating: 4 of 5 Stars</dd>
-    </section>
-    <section id="main-nav">
+        <h3>Mexican Rice</h3>
+        <p> Traditional recipe with a twist.</P>
+        <h5>Rating: 4 of 5 Stars</h5>
+        </section>
+      <section>
+        <h4>Salsa</h4>
+        <p>Just the right amount of spice.</p>
+        <h5>Rating: 5of 5 Stars</h5>
+       </section>
+      <section>
+        <h4>Guacamole</h4>
+        <p>Fresh and healthey.</p>
+        <h5>Rating: 4of 5 Stars</h5>
+        </section>
+          <section>
+        <h4>Tortillas</h4>
+            <p>Easy to make and so good.</p>
+      <h5> Rating: 4 of 5 Stars<h5>
+        </section>
+    <article id="main-nav">
       
     <!--hamburger--> 
-        <nav>
+
         <h2>Main Navigation</h2>
+        <nav>
         <input type="checkbox" id="dropdown"/>
         <label for="dropdown"><span>Menus</span></label>
         <ul>
@@ -161,7 +162,8 @@
       </svg></a></li>
     </div>
   </ul>
-<div class="item-search">
+  </nav>
+<section class="item-search">
     <!--search-->
     <input type="search" id="site-search" name="q">
     <button>Search</button>
@@ -170,11 +172,11 @@
         <circle cx="10" cy="10" r="7" />
         <line x1="21" y1="21" x2="15" y2="15" />
     </svg>
-</div>
-  </nav>
   </section>
-  <section>
+  </article>
+  <footer>
     <h2>Connect</h2>
+    <div id="right">
     <h3>Social Media Links</h3>
     <!--star-->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
@@ -210,12 +212,13 @@
         <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
       </svg>
     </ul>
-  </section>
-      <footer>
+  </div>
+      <div id="left">
       <h3>Good Eats</h3>
         <p>Copyright 2022</p>
         <p>Taco Cheesington</p>
-    </footer>
+      </div>
+  </footer>
 </body>
 </html>
 
