--- a/svgs.html
+++ b/svgs.html
@@ -14,6 +14,7 @@
    <section id="media">
     <ul>
     <!--save-->
+    <div class="save">
     <li>Save</li>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -21,7 +22,9 @@
         <polyline points="7 11 12 16 17 11" />
         <line x1="12" y1="4" x2="12" y2="16" />
       </svg>
+    </div>
     <!--share-->
+    <div class="share">
     <li>Share</li>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-share" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -31,6 +34,8 @@
         <line x1="8.7" y1="10.7" x2="15.3" y2="7.3" />
         <line x1="8.7" y1="13.3" x2="15.3" y2="16.7" />
       </svg>
+    </div>
+    <div class="print">
     <!--print-->
     <li>Print</li>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-printer" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -39,6 +44,8 @@
         <path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" />
         <rect x="7" y="13" width="10" height="8" rx="2" />
       </svg>
+      </div>
+      <div class="jump">
     <!--jump-->
     <li>Jump</li>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-symlink" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -48,6 +55,7 @@
         <path d="M14 3v4a1 1 0 0 0 1 1h4" />
         <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
       </svg>
+      </div>
     </ul>
   </section>
 </header>
@@ -60,8 +68,8 @@
   </figcaption>
   </figure>
 </main>
-    <article id="details">
-      <section>
+    <article> 
+      <section id="details">>
       <h2>Details</h2>
         <p>Prep Time: 10 minutes</p>
         <p>Cook Time: 10 minutes</p>
