--- a/svgs.html
+++ b/svgs.html
@@ -68,16 +68,15 @@
   </figcaption>
   </figure>
 </main>
-    <article> 
-      <section id="details">>
+    <article id="details">>
       <h2>Details</h2>
         <p>Prep Time: 10 minutes</p>
         <p>Cook Time: 10 minutes</p>
         <p>Total Time: 20 minutes</p>
         <p>Author: Taco Cheesington</p>
         <p>Servings: 6 Tacos</p>
-      </section>
-    <section id="ingredients">
+      </article>
+    <article id="ingredients">
       <h2>Ingredients</h2>
       <ul>
         <li>Flank steak</li>
@@ -92,8 +91,8 @@
         <li>Pepper</li>
         <li>Corn tortillas</li>
       </ul>
-    </section>
-    <section id="directions">
+    </article>
+    <article id="directions">
       <h2>Directions</h2>
       <ol>
         <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
@@ -101,7 +100,7 @@
         <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
         <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
-    </section>
+    </article>
     <article id="sides">
       <h2>Need some side dishes?</h2>
       <section>
@@ -124,6 +123,7 @@
             <p>Easy to make and so good.</p>
       <h5> Rating: 4 of 5 Stars<h5>
         </section>
+        </article>
     <article id="main-nav">
       
     <!--hamburger--> 
