--- a/svgs.html
+++ b/svgs.html
@@ -102,6 +102,7 @@
       <h2>Need some side dishes?</h2>
       <section>
         <h3>Mexican Rice</h3>
+        <img src="mexican-rice.png">
         <p> Traditional recipe with a twist.</P>
         <h5>Rating: 4 of 5 Stars</h5>
         </section>
