--- a/svgs.html
+++ b/svgs.html
@@ -108,16 +108,19 @@
         </section>
       <section>
         <h4>Salsa</h4>
+        <img src="salsa.png">
         <p>Just the right amount of spice.</p>
         <h5>Rating: 5of 5 Stars</h5>
        </section>
       <section>
         <h4>Guacamole</h4>
+        <img src="guacamole.png">
         <p>Fresh and healthey.</p>
         <h5>Rating: 4of 5 Stars</h5>
         </section>
           <section>
         <h4>Tortillas</h4>
+        <img src="tortillas.png">
             <p>Easy to make and so good.</p>
       <h5> Rating: 4 of 5 Stars<h5>
         </section>
