--- a/svgs.html
+++ b/svgs.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>SVGs</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Bebas%20Neue%7CMontserrat:ital,wght@0,400;0,700;1,400">
 </head>
 <body>
   <header>
