--- a/svgs.html
+++ b/svgs.html
@@ -36,14 +36,14 @@
         <line x1="8.7" y1="13.3" x2="15.3" y2="16.7" />
       </svg><span>Share</span></a></li>
     <!--print-->
-    <li>
+    <li>print</li>
       <a href="#print">
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-printer" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" />
         <path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" />
         <rect x="7" y="13" width="10" height="8" rx="2" />
-      </svg><span></span></a></li>
+      </svg><span>hi</span></a>
     <!--jump-->
     <li>Jump</li>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-symlink" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -226,6 +226,7 @@
       <h3>Good Eats</h3>
         <p>Copyright 2022</p>
         <p>Taco Cheesington</p>
+        <img src="taco-cheesington.png">
       </div>
   </footer>
 </body>
