--- a/svgs.html
+++ b/svgs.html
@@ -46,6 +46,7 @@
       </svg><span>Print</span></a>
     <!--jump-->
     <li>Jump</li>
+     <a href="jump">
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-symlink" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M4 21v-4a3 3 0 0 1 3 -3h5" />
