--- a/svgs.html
+++ b/svgs.html
@@ -20,7 +20,7 @@
         <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
         <polyline points="7 11 12 16 17 11" />
         <line x1="12" y1="4" x2="12" y2="16" />
-      </svg><span>Save</span>
+      </svg>
     <!--share-->
     <div>share</div>   
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-share" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -30,9 +30,9 @@
         <circle cx="18" cy="18" r="3" />
         <line x1="8.7" y1="10.7" x2="15.3" y2="7.3" />
         <line x1="8.7" y1="13.3" x2="15.3" y2="16.7" />
-      </svg><span>Share</span>
+      </svg>
     <!--print-->
-    <li>print</li>
+    <div>print</div>
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-printer" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" />
