--- a/svgs.html
+++ b/svgs.html
@@ -164,7 +164,7 @@
     </div>
   </ul>
   </nav>
-<section class="item-search">
+<div class="item-search">
     <!--search-->
     <input type="search" id="site-search" name="q">
     <button>Search</button>
@@ -173,7 +173,7 @@
         <circle cx="10" cy="10" r="7" />
         <line x1="21" y1="21" x2="15" y2="15" />
     </svg>
-  </section>
+  </div>
 </article>
   <footer>
     <h2>Connect</h2>
@@ -184,14 +184,13 @@
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
     </svg>
-    <ul>
-      <li>Facebook</li>
+      <div>Facebook</div>
     <!--facebook-->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
       </svg>
-      <li>Instagram</li>
+      <div>Instagram</div>
     <!--instagram-->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -199,26 +198,25 @@
         <circle cx="12" cy="12" r="3" />
         <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
       </svg>
-      <li>YouTube</li>
+      <div>YouTube</div>
     <!--youtube-->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <rect x="3" y="5" width="18" height="14" rx="4" />
         <path d="M10 9l5 3l-5 3z" />
       </svg>
-      <li>Tik Tok</li>
+      <div>Tik Tok</div>
     <!--tiktok-->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
       </svg>
-    </ul>
   </div>
       <div id="left">
       <h3>Good Eats</h3>
         <p>Copyright 2022</p>
         <p>Taco Cheesington</p>
-        <img src="taco-cheesington.png">
+        <img src="taco-cheesington.png" alt="chees">
       </div>
   </footer>
 </body>
