--- a/svgs.html
+++ b/svgs.html
@@ -179,7 +179,7 @@
 </article>
   <footer>
     <h2>Connect</h2>
-    <div id="right">
+    <div class="rightCol">
     <h3>Social Media Links</h3>
     <!--star-->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
@@ -214,7 +214,7 @@
         <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
       </svg>
   </div>
-      <div id="left">
+      <div class id="leftCol">
       <h3>Good Eats</h3>
         <p>Copyright 2022</p>
         <p>Taco Cheesington</p>
