--- a/svgs.html
+++ b/svgs.html
@@ -92,32 +92,34 @@
         <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
     </article>
-    <article id="sides">
+    <article class="sides">
       <h2>Need some side dishes?</h2>
-      <section>
+      <section id="sides">
+        <div>
         <h4>Mexican Rice</h4>
         <img src="mexican-rice.png" alt="rice">
         <p> Traditional recipe with a twist.</P>
         <h5>Rating: 4 of 5 Stars</h5>
-        </section>
-      <section>
+        </div>
+      <div>
         <h4>Salsa</h4>
         <img src="salsa.png" alt="salsa">
         <p>Just the right amount of spice.</p>
         <h5>Rating: 5of 5 Stars</h5>
-       </section>
-      <section>
+      </div>
+      <div>
         <h4>Guacamole</h4>
         <img src="guacamole.png" alt="guac">
         <p>Fresh and healthey.</p>
         <h5>Rating: 4of 5 Stars</h5>
-        </section>
-          <section>
+      </div>
+          <div>
         <h4>Tortillas</h4>
         <img src="tortillas.png" alt="tortillas">
             <p>Easy to make and so good.</p>
       <h5> Rating: 4 of 5 Stars</h5>
-        </section>
+          </div>
+          </section>
         </article>
     <article id="main-nav"> 
     <!--hamburger--> 
