--- a/svgs.html
+++ b/svgs.html
@@ -67,7 +67,8 @@
         <p>Author: Taco Cheesington</p>
         <p>Servings: 6 Tacos</p>
       </article>
-    <article id="ingredients">
+    <article id="info">
+      <section id="ingredients">
       <h2>Ingredients</h2>
       <ul>
         <li>Flank steak</li>
@@ -82,8 +83,8 @@
         <li>Pepper</li>
         <li>Corn tortillas</li>
       </ul>
-    </article>
-    <article id="directions">
+    </section>
+    <section id="directions">
       <h2>Directions</h2>
       <ol>
         <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
@@ -91,6 +92,7 @@
         <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
         <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
+    </section>
     </article>
     <article class="sides">
       <h2>Need some side dishes?</h2>
