--- a/svgs.html
+++ b/svgs.html
@@ -61,11 +61,13 @@
 </main>
     <article id="details">>
       <h2>Details</h2>
+      <section class="details">
         <p>Prep Time: 10 minutes</p>
         <p>Cook Time: 10 minutes</p>
         <p>Total Time: 20 minutes</p>
         <p>Author: Taco Cheesington</p>
         <p>Servings: 6 Tacos</p>
+      </section>
       </article>
     <article id="info">
       <section id="ingredients">
