--- a/svgs.html
+++ b/svgs.html
@@ -59,7 +59,7 @@
   </figcaption>
   </figure>
 </main>
-    <article id="details">>
+    <article id="details">
       <h2>Details</h2>
       <section class="details">
         <p>Prep Time: 10 minutes</p>
