--- a/svgs.html
+++ b/svgs.html
@@ -62,11 +62,11 @@
     <article id="details">
       <h2>Details</h2>
       <section class="details">
-        <p>Prep Time: 10 minutes</p>
-        <p>Cook Time: 10 minutes</p>
-        <p>Total Time: 20 minutes</p>
-        <p>Author: Taco Cheesington</p>
-        <p>Servings: 6 Tacos</p>
+        <h5>Prep Time</h5><p>10 minutes</p>
+        <h5>Cook Time</h5><p>10 minutes</p>
+        <h5>Total Time</h5><p>minutes</p>
+        <h5>Author</h5><p>Taco Cheesington</p>
+        <h5>Servings</h5><p>6 Tacos</p>
       </section>
       </article>
     <article id="info">
