--- a/svgs.html
+++ b/svgs.html
@@ -62,11 +62,11 @@
     <article id="details">
       <h2>Details</h2>
       <section class="details">
-        <h5>Prep Time</h5><p>10 minutes</p>
-        <h5>Cook Time</h5><p>10 minutes</p>
-        <h5>Total Time</h5><p>minutes</p>
-        <h5>Author</h5><p>Taco Cheesington</p>
-        <h5>Servings</h5><p>6 Tacos</p>
+        <p><strong>Prep Time</strong>10 minutes</p>
+        <p><strong>Cook Time</strong>10 minutes</p>
+        <p><strong>Total Time</strong>minutes</p>
+        <p><strong>Author</strong>Taco Cheesington</p>
+        <p><strong>Servings</strong>6 Tacos</p>
       </section>
       </article>
     <article id="info">
