--- a/svgs.html
+++ b/svgs.html
@@ -12,8 +12,9 @@
 <body>
   <header>
     <!--Good Eats-Street Tacos-->
-    <section id="media">
+    <article id="media">
     <h1> Street Tacos</h1>
+    <section class="media">>
     <div>save</div>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -49,6 +50,7 @@
         <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
       </svg>
   </section>
+  </article>
 </header>
 <main>
 <figure id="street-tacos">
@@ -62,11 +64,11 @@
     <article id="details">
       <h2>Details</h2>
       <section class="details">
-        <p><strong>Prep Time</strong>10 minutes</p>
-        <p><strong>Cook Time</strong>10 minutes</p>
-        <p><strong>Total Time</strong>minutes</p>
-        <p><strong>Author</strong>Taco Cheesington</p>
-        <p><strong>Servings</strong>6 Tacos</p>
+        <p><strong>Prep Time</strong> 10 minutes</p>
+        <p><strong>Cook Time</strong> 10 minutes</p>
+        <p><strong>Total Time</strong> 20minutes</p>
+        <p><strong>Author</strong> Taco Cheesington</p>
+        <p><strong>Servings</strong> 6 Tacos</p>
       </section>
       </article>
     <article id="info">
