--- a/svgs.html
+++ b/svgs.html
@@ -14,7 +14,7 @@
     <!--Good Eats-Street Tacos-->
     <article id="media">
     <h1> Street Tacos</h1>
-    <section class="media">>
+    <section class="media">
     <div>save</div>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
