--- a/svgs.html
+++ b/svgs.html
@@ -155,13 +155,13 @@
           </div>
         <nav>
           <ul>
-          <li>Breakfast</li>
-          <li>Brunch</li>
-          <li>Lunch</li>
-          <li>Dinner</li>
-          <li>Appetizers</li>
-          <li>Desserts</li>
-          <li>Beverages</li>  
+          <li><a href="breakfast.png">Breakfast</a></li>
+          <li><a href="brunch.png">Brunch</a></li>
+          <li><a href="lunch.png">Lunch</a></li>
+          <li><a href="dinner.png">Dinner</a></li>
+          <li></li><a href="appetizers.png">Appetizers</a></li>
+          <li><a href="desserts.png">Desserts</a></li>
+          <li><a href="beverages.png">Beverages</a></li>  
           </ul>
         </nav>  
     <!--avatar-->
