--- a/svgs.html
+++ b/svgs.html
@@ -15,7 +15,7 @@
     <article id="media">
     <h1> Street Tacos</h1>
     <section class="media">
-    <div>save</div>
+    <h4>save</h4>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
@@ -23,7 +23,7 @@
         <line x1="12" y1="4" x2="12" y2="16" />
       </svg>
     <!--share-->
-    <div>share</div>   
+    <h4>share</h4>   
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-share" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <circle cx="6" cy="12" r="3" />
@@ -33,7 +33,7 @@
         <line x1="8.7" y1="13.3" x2="15.3" y2="16.7" />
       </svg>
     <!--print-->
-    <div>print</div>
+    <h4>print</h4>
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-printer" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" />
@@ -41,7 +41,7 @@
         <rect x="7" y="13" width="10" height="8" rx="2" />
       </svg>
     <!--jump-->
-    <div>Jump</div>
+    <h4>Jump</h4>
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-symlink" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M4 21v-4a3 3 0 0 1 3 -3h5" />
