--- a/svgs.html
+++ b/svgs.html
@@ -72,7 +72,7 @@
       </div>
       </article>
     <article id="info">
-      <div id="ingredients">
+      <section id="ingredients">
       <h2>Ingredients</h2>
       <ul>
         <li>Flank steak</li>
