--- a/svgs.html
+++ b/svgs.html
@@ -72,6 +72,7 @@
       </div>
       </article>
     <article id="info">
+      <h3>hidden</h3>
       <section id="ingredients">
       <h2>Ingredients</h2>
       <ul>
