--- a/svgs.html
+++ b/svgs.html
@@ -71,7 +71,7 @@
         <p><strong>Servings</strong> 6 Tacos</p>
       </div>
       </article>
-    <article id="info">
+    <div id="info">
       <h3>hidden</h3>
       <section id="ingredients">
       <h2>Ingredients</h2>
@@ -98,7 +98,7 @@
         <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
     </section>
-    </article>
+  </div>
     <article class="sides">
       <h2>Need some side dishes?</h2>
       <section id="sides">
