--- a/svgs.html
+++ b/svgs.html
@@ -14,7 +14,7 @@
     <!--Good Eats-Street Tacos-->
     <article id="media">
     <h1> Street Tacos</h1>
-    <div class="media">
+    <section class="media">
     <div>save</div>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -49,7 +49,7 @@
         <path d="M14 3v4a1 1 0 0 0 1 1h4" />
         <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
       </svg>
-    </div>
+    </section>
   </article>
 </header>
 <main>
